--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "lucide-react": "^0.454.0",
-    "next": "15.0.0",
+    "next": "^15.0.3-canary.1",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
